# fp-final

./: .gitignore  .hlint.yaml  final-project.cabal  scores.json
Infinite mode segments/: MyLevel.lvl  MyLevel.segment.json  Segment4.lvl  Segment4.segment.json  seg1.lvl  seg1.segment.json  segment1-1.lvl  segment1-1.segment.json  segment1.lvl  segment2.lvl  segment2.segment.json  segment3.lvl  segment3.segment.json  segment5.lvl  segment5.segment.json  segment6.lvl  segment6.segment.json
Levels/: MyLevel.lvl  haskelliscool.lvl  koopatestlevel.lvl
app/: Assets.hs  Collision.hs  Controller.hs  InitialState.hs  LevelCodec.hs  Main.hs  MathUtils.hs  Model.hs  View.hs
app/Controller/: Collision.hs  Input.hs  InputBuilder.hs  InputMenu.hs  Movement.hs  Update.hs  WorldMap.hs
app/Model/: Collider.hs  Config.hs  Entity.hs  InfiniteSegments.hs  InfiniteWorld.hs  InitialState.hs  Scores.hs  Types.hs  TypesState.hs  World.hs  WorldMap.hs  WorldMapCodec.hs
app/View/: Builder.hs  Entity.hs  Game.hs  GameUI.hs  Helpers.hs  Main.hs  Menu.hs  WorldMap.hs
built-in-levels/: 1-1.lvl  1-2.lvl  1-boss.lvl  segment2.lvl
levels/: Beka.lvl  dim.lvl  flagtest.lvl  gissa.lvl  goombatest.lvl  quicksave.lvl  test.lvl  wpteoij.lvl
worlds/: default.json
