cabal-version:      3.0

name:               final-project
version:            0.1.0.0
author:             Maiko van der Veen, Sam van Delten

category:           Game
build-type:         Simple

common warnings
    ghc-options: -Wall

executable final-project
    -- Import common warning flags.
    import:           warnings

    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Model.Types
      Model.Config
      Model.Collider
      Model.InitialState
      View
      Controller.Update
      Controller.Input
      Controller.Collision
      Controller.Movement
      MathUtils
      Assets
      LevelCodec

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:    directory ^>=1.3.8.5, base ^>=4.18.3.0, gloss, containers, bytestring, directory

    hs-source-dirs:   app

    default-language: Haskell2010
    default-extensions:
      NamedFieldPuns
      RecordWildCards
