cabal-version:      3.0

name:               final-project
version:            0.1.0.0
author:             Maiko van der Veen, Sam van Delten

category:           Game
build-type:         Simple

common warnings
    ghc-options: -Wall

executable final-project
    import:           warnings

    main-is:          Main.hs

    other-modules:
      Model.Types
      Model.TypesState
      Model.Config
      Model.World
      Model.Entity
      Model.Collider
      Model.InitialState
      Model.InfiniteSegments
      Model.InfiniteWorld
      Model.WorldMap
      Model.WorldMapCodec
      Model.Scores

      View.Main
      View.Game
      View.GameUI
      View.Entity
      View.Helpers
      View.Menu
      View.WorldMap
      View.Builder

      Controller.Update
      Controller.Collision
      Controller.Movement
      Controller.WorldMap
      Controller.Input
      Controller.InputMenu
      MathUtils
      Assets
      LevelCodec

    build-depends:    base ^>=4.18.3.0
                    , gloss
                    , containers
                    , bytestring
                    , directory
                    , filepath
                    , aeson
                    , aeson-pretty
                    , text
                    , vector
                    , random

    hs-source-dirs:   app

    default-language: Haskell2010
    default-extensions:
      NamedFieldPuns
      RecordWildCards
      LambdaCase
